--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Portfolio</title>
+        <link rel="stylesheet" href="newstyles.css">
+    </head>
+    <body class="flex space-x-10 w-screen bg-yellow-300 bg-cover justify-items-center">
+        <div class="ml-10 aspect-square w-1/3 center border border-yellow-600 border-10 rounded-25 bg-yellow-300">
+            <h1 class="font-bold text-center text-2xl">Sec 1</h1>
+        </div>
+        <div class="aspect-square w-1/3 text-center border border-yellow-600 border-10 rounded-25 bg-yellow-300">
+            <h1 class="font-bold text-center text-2xl">Sec 2</h1>
+        </div>
+        <div class="mr-10 aspect-square w-1/3 text-center border border-yellow-600 border-10 rounded-25 bg-yellow-300">
+            <h1 class="font-bold text-center text-2xl">Sec 3</h1>
+        </div>
+        <script src="script.js"></script>
+    </body>
 </html>
