--- a/sec1/index.html
+++ b/sec1/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sec 1 Portfolio</title>
-        <link rel="stylesheet" href="newstyles.css">
+        <link rel="stylesheet" href="../newstyles.css">
     </head>
     <body class="h-dvh w-dvw flex items-center bg-yellow-300">
         <header class="w-full logo bg-[url('/src/duck1.jpg')] bg-cover">
             <h1 class="font-bold text-center text-3xl text-white">sec 1..</h1>
         </header>
-        <script src="levels/sec1/script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
