--- a/sec3/index.html
+++ b/sec3/index.html
@@ -6,10 +6,98 @@
         <title>Sec 3 Portfolio</title>
         <link rel="stylesheet" href="../newstyles.css">
     </head>
-    <body class="h-dvh w-dvw flex items-center bg-yellow-300">
-        <header class="w-full logo bg-[url('/src/duck3.jpg')] bg-cover">
-            <h1 class="font-bold text-center text-3xl text-white">sec 3..</h1>
-        </header>
+    <body class="h-dvh w-dvw bg-yellow-300">
+        <nav class="sticky top-0 w-full bg-white border-gray-800">
+            <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+            <a href="../index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <img src="../src/duck3.jpg" class="h-8 border border-4 border-white rounded-full" />
+                <span class="self-center text-2xl font-bold text-blue-500">Lyndon Loh (Sec 3)</span>
+            </a>
+            <div class="hidden md:block md:w-auto">
+                <ul class="font-medium flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-blue-500  dark:border-gray-700">
+                    <li>
+                        <a href="#whoami" class="block py-2 px-3 text-blue-500 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Who Am I?</a>
+                    </li>
+                    <li>
+                        <a href="#acads" class="block py-2 px-3 text-blue-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Academics</a>
+                    </li>
+                    <li>
+                        <a href="#cca" class="block py-2 px-3 text-blue-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">CCA</a>
+                    </li>
+                    <li>
+                        <a href="#passions" class="block py-2 px-3 text-blue-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Passions</a>
+                    </li>
+                    <li>
+                        <a href="#community" class="block py-2 px-3 text-blue-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Milestones</a>
+                    </li>
+                </ul>
+        </nav>
+        <div class="m-5 flex justify-center items-center" id="whoami">
+            <div class="w-1/2 shrink-0 flex flex-col justify-center items-center">
+                <img class="m-auto h-80 pt-5" src="../src/lyndonsec3.jpeg" />
+                <h1 class="text-3xl font-bold text-blue-500 text-center pt-5">Who am I?</h1>
+                <p class="text-center text-blue-500 pt-5">Hi :D I am Lyndon, class monitor of 3A3 and member of EC<sup>3</sup>. I live by two philosphies:</p>
+                <div>
+                    <ul class="list-disc text-blue-500">
+                        <li class="text-blue-500 mt-2">Work hard, play hard</li>
+                        <li class="text-blue-500 mt-2">Go with the flow</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="m-5 flex justify-center items-center" id="acads">
+            <div class="w-1/2 shrink-0 flex flex-col justify-center items-center">
+                <h1 class="text-3xl font-bold text-blue-500 text-center pt-5">Academics</h1>
+                <p class="text-center text-blue-500 pt-5">In short, I am coping well. Though it has been difficult to juggle a "work-life balance", I can catch up with the lessons and that's cool :D</p>
+                <table class="table-auto m-5">
+                    <thead>
+                        <tr>
+                            <th class="bg-blue-500 px-4 py-2">Subjects</th>
+                            <th class="bg-blue-600 px-4 py-2">Thoughts</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="border bg-white px-4 py-2">Computing</td>
+                            <td class="border bg-gray-100 px-4 py-2"><code>print("Very wonderful experience! Doing well in terms of grades! Mr Zhou best computing teacher :D")</code></td>
+                        </tr>
+                        <tr>
+                            <td class="border bg-white px-4 py-2">Mathematics</td>
+                            <td class="border bg-gray-100 px-4 py-2">Still staying strong, A1 :)</td>
+                        </tr>
+                        <tr>
+                            <td class="border bg-white px-4 py-2">English</td>
+                            <td class="border bg-gray-100 px-4 py-2">Biggest improvement out of all subjects. From B3 last year and C6 during practices, to A1 in common test and more confidence in speaking. Furthermore, I found new appreciation for writing as well :D</td>
+                        </tr>
+                        <tr>
+                            <td class="border bg-white px-4 py-2">Chinese</td>
+                            <td class="border bg-gray-100 px-4 py-2">Has become significantly harder this year :< Grades-wise, not the best for Common Test. Chinese oral was also a stressful time, especially considering I cannot speak Chinese well. Managed to get through it and hope to improve later on.</td>
+                        </tr>
+                        <tr>
+                            <td class="bg-white px-4 py-2">Physics + Chemistry</td>
+                            <td class="bg-gray-100 px-4 py-2">Doing fine, although technically new subjects, still managing well</td>
+                        </tr>
+                        <tr>
+                            <td class="bg-white px-4 py-2">Geography/Social Studies</td>
+                            <td class="bg-gray-100 px-4 py-2">(insert thumbs up)</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="m-5 flex justify-center items-center" id="cca">
+            <div class="w-1/2 shrink-0 flex flex-col justify-center items-center">
+                <img class="m-auto h-80 pt-5" src="../src/cca.jpeg" />
+                <h1 class="text-3xl font-bold text-blue-500 text-center pt-5">CCA (EC<sup>3</sup>)</h1>
+                <p class="text-center text-blue-500 pt-5">For 3 years, I have been part of the Electronics, Communication and Computing Club (EC<sup>3</sup>). To put it briefly, it's a CCA filled with people interested in programming and different fields of it (web development, competitive programming etc.) </p>
+                <div>
+                    <ul class="list-disc text-blue-500">
+                        <li class="text-blue-500 mt-2">Work hard, play hard</li>
+                        <li class="text-blue-500 mt-2">Go with the flow</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
         <script src="sec3/script.js"></script>
     </body>
 </html>
