--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
         <title>Portfolio</title>
         <link rel="stylesheet" href="newstyles.css">
     </head>
-    <body class="h-dvh w-dvw flex items-center bg-yellow-300">
-        <div class="p-2 justify-around flex-wrap w-full flex items-start">
-            <a href="sec1/index.html" class="w-1/4 overflow-hidden rounded-full border border-yellow-600 border-4">
-                <div class="hover:scale-125 cursor-pointer ease-in duration-100 shadow-xl logo bg-[url('/src/duck1.jpg')] bg-cover py-8 aspect-square">
+    <body class="h-dvh w-dvw flex flex-col justify-center items-center bg-yellow-300">
+        <h1 class="w-full text-5xl font-bold text-blue-500 text-center mb-3">Lyndon Loh</h1>
+        <div class="p-2 justify-around flex flex-wrap w-full flex items-start">
+            <a href="sec1/index.html" class="m-1 w-1/3 md:w-1/4 overflow-hidden rounded-full border border-white border-8">
+                <div class="hover:scale-125 cursor-pnter ease-in duration-100 shadow-xl logo bg-[url('/src/duck1.jpg')] bg-cover py-9 aspect-square">
                     <h1 class="font-bold text-center text-3xl text-white">Sec 1</h1>
                 </div>
             </a>
-            <a href="sec2/index.html" class="w-1/4 overflow-hidden rounded-full border border-yellow-600 border-4">
-                <div class="hover:scale-125 cursor-pointer ease-in duration-100 shadow-xl logo bg-[url('/src/duck2.jpg')] bg-cover py-8 aspect-square">
-                    <h1 class="font-bold text-center text-3xl text-white">Sec 2</h1>
+            <a href="sec2/index.html" class="m-1 w-1/3 md:w-1/4 overflow-hidden rounded-full border border-blue-500 border-8">
+                <div class="hover:scale-125 cursor-pointer ease-in duration-100 shadow-xl logo bg-[url('/src/duck2.jpg')] bg-cover py-9 aspect-square">
+                    <h1 class="font-bold text-center text-3xl text-blue-500">Sec 2</h1>
                 </div>
             </a>
-            <a href="sec3/index.html" class="w-1/4 overflow-hidden rounded-full border border-yellow-600 border-4">
-                <div class="hover:scale-125 cursor-pointer ease-in duration-100 shadow-xl logo bg-[url('/src/duck3.jpg')] bg-cover py-8 aspect-square">
+            <a href="sec3/index.html" class="m-1 w-1/3 md:w-1/4 overflow-hidden rounded-full border border-white border-8">
+                <div class="hover:scale-125 cursor-pointer ease-in duration-100 shadow-xl logo bg-[url('/src/duck3.jpg')] bg-cover py-9 aspect-square">
                     <h1 class="font-bold text-center text-3xl text-white">Sec 3</h1>
                 </div>
             </a>
