--- a/sec3/index.html
+++ b/sec3/index.html
@@ -90,10 +90,12 @@
                 <img class="m-auto h-80 pt-5" src="../src/cca.jpeg" />
                 <h1 class="text-3xl font-bold text-blue-500 text-center pt-5">CCA (EC<sup>3</sup>)</h1>
                 <p class="text-center text-blue-500 pt-5">For 3 years, I have been part of the Electronics, Communication and Computing Club (EC<sup>3</sup>). To put it briefly, it's a CCA filled with people interested in programming and different fields of it (web development, competitive programming etc.) </p>
+                <h2 class="text-center text-blue-500 pt-3">During my 1st year..</h2>
                 <div>
                     <ul class="list-disc text-blue-500">
-                        <li class="text-blue-500 mt-2">Work hard, play hard</li>
-                        <li class="text-blue-500 mt-2">Go with the flow</li>
+                        <li class="text-blue-500 mt-2">Only had some skill in basic Python, competitive programming</li>
+                        <li class="text-blue-500 mt-2">No specific expertise in any field</li>
+                        <li class="text-blue-500 mt-2">Only made 1 friend</li>
                     </ul>
                 </div>
             </div>
