--- a/sec3/index.html
+++ b/sec3/index.html
@@ -86,18 +86,79 @@
             </div>
         </div>
         <div class="m-5 flex justify-center items-center" id="cca">
-            <div class="w-1/2 shrink-0 flex flex-col justify-center items-center">
+            <div class="w-full md:w-1/2 shrink-0 flex flex-col justify-center items-center">
                 <img class="m-auto h-80 pt-5" src="../src/cca.jpeg" />
                 <h1 class="text-3xl font-bold text-blue-500 text-center pt-5">CCA (EC<sup>3</sup>)</h1>
                 <p class="text-center text-blue-500 pt-5">For 3 years, I have been part of the Electronics, Communication and Computing Club (EC<sup>3</sup>). To put it briefly, it's a CCA filled with people interested in programming and different fields of it (web development, competitive programming etc.) </p>
-                <h2 class="text-center text-blue-500 pt-3">During my 1st year..</h2>
+                <h2 class="text-2xl font-bold text-center text-blue-500 pt-3">During my 1st year..</h2>
                 <div>
                     <ul class="list-disc text-blue-500">
                         <li class="text-blue-500 mt-2">Only had some skill in basic Python, competitive programming</li>
                         <li class="text-blue-500 mt-2">No specific expertise in any field</li>
-                        <li class="text-blue-500 mt-2">Only made 1 friend</li>
+                        <li class="text-blue-500 mt-2">Only made 1 friend from CCA</li>
                     </ul>
                 </div>
+                <h2 class="text-2xl font-bold text-center text-blue-500 pt-3">In sec 2</h2>
+                <div>
+                    <ul class="list-disc text-blue-500">
+                        <li class="text-blue-500 mt-2">Gained a clear interest in web development</li>
+                        <li class="text-blue-500 mt-2">Learnt basic HTML, CSS, Javascript and React</li>
+                        <li class="text-blue-500 mt-2">Made more friends that I know till this day (Bang Zhen, Wei Yu etc.) </li>
+                        <li class="text-blue-500 mt-2">Personal projects created (Calculator, Quiz, Past Year SLF)</li>
+                    </ul>
+                </div>
+                <h2 class="text-2xl font-bold text-center text-blue-500 pt-3">Now</h2>
+                <div>
+                    <ul class="list-disc text-blue-500">
+                        <li class="text-blue-500 mt-2">Gained a clear interest in web development + cybersecurity</li>
+                        <li class="text-blue-500 mt-2">In CCA, mostly working on this large-scale web project + training cybersecurity in picoCTF</li>
+                        <li class="text-blue-500 mt-2">Through my 3 years, I have learnt the importance of perseverance, friendship and more importantly, lifelong learning</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="m-5 flex justify-center items-center" id="passions">
+            <div class="w-1/2 shrink-0 flex flex-col justify-center items-center">
+                <h1 class="text-3xl font-bold text-blue-500 text-center pt-5">Passions</h1>
+                <img class="m-auto h-60 pt-5" src="../src/calculator.png" />
+                <h2 class="text-2xl font-bold text-blue-500 text-center pt-5">Web Development</h2>
+                <p class="text-center text-blue-500 pt-5">In Sec 2, I created:</p>
+                <div>
+                    <ul class="list-disc text-blue-500">
+                        <li class="text-blue-500 mt-2"><a href="">Calculator</a></li>
+                        <li class="text-blue-500 mt-2"><a href="">Quiz</a></li>
+                    </ul>
+                </div>
+                <p class="text-center text-blue-500 pt-5">I only knew the basic languages needed (HTML, CSS, Javascript) and one framework (React).</p>
+                <p class="text-bold text-center text-blue-500 pt-5">However, I have now learnt how to program the server-side + am working on a huge project. It's a website where players can create their own board game and then start sessions with other players.</p>
+                <img class="m-auto border border-4 h-60 mt-5" src="../src/webdev3.png" />
+                <img class="m-auto border border-4 h-60 mt-5" src="../src/webdev22.png" />
+                <p class="text-center text-blue-500 pt-5">I also learnt other styling frameworks to make my website look nicer! In fact, I made this website using one :D!</p>
+                <h2 class="text-2xl font-bold text-blue-500 text-center pt-5">Cybersecurity</h2>
+                <img class="m-auto border border-4 h-60 mt-5" src="../src/ctf.png" />
+                <h2 class="text-2xl font-bold text-blue-500 text-center pt-5">Duck Collecting(?)</h2>
+                <p class="text-center text-blue-500 pt-5">More of a hobby really, though it does help calm me down</p>
+                <img class="m-auto border border-4 h-60 my-5" src="../src/bread.jpeg" />
+            </div>
+        </div>
+        <div class="m-5 flex justify-center items-center" id="community">
+            <div class="w-1/2 shrink-0 flex flex-col justify-center items-center">
+                <h1 class="text-3xl font-bold text-blue-500 text-center pt-5">Milestones</h1>
+                <video class="m-5" width="640" height="480" controls>
+                    <source src="../src/tellmewhy.mp4" type="video/mp4">
+                  </video>
+                <p class="text-center text-blue-500 pt-5">^^ This was our class performance.</p>
+                <img class="m-auto border border-4 h-60 my-5" src="../src/wavecrest.png" />
+                <h2 class="text-2xl font-bold text-blue-500 text-center pt-5">Wavecrest Scholarship</h2>
+                <p class="text-center text-blue-500 pt-5">Great opportunity for me -> Learning Game Design through the LIVE courses provided by this scholarship + Forums that instill certain lesons (setting goals, teamwork, communication etc.) </p>
+                <video class="m-5" width="640" height="480" controls>
+                    <source src="../src/chinaa.mp4" type="video/mp4">
+                </video>
+                <h2 class="text-2xl font-bold text-blue-500 text-center pt-5">Chinese AA</h2>
+                <p class="text-center text-blue-500 pt-5">For our Chinese AA, we had to film a 3-5 minute video to showcase the theme of kindness. We decided to volunteer with an organisation called the Soup Kitchen Project to contribute our hours whilst filming this for our project. Through this, I did learn that we need to appreciate food and not waste it, because there are people who do not have access or cannot afford it. I also learnt the importance of serving the community. </p>
+                <img class="m-auto border border-4 h-60 my-5" src="../src/sabbat.jpeg" />
+                <h2 class="text-2xl font-bold text-blue-500 text-center pt-5">0xdeadbeef Sabbatical</h2>
+                <p class="text-center text-blue-500 pt-5">I helped teach students about CTF.</p>
             </div>
         </div>
         <script src="sec3/script.js"></script>
